solve test problems, made code more readable

--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,23 @@
+@font-face {
+  font-family: "Avenir";
+  src: url("fonts/avenir-book.ttf");
+  font-style: normal;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Avenir";
+  src: url("fonts/avenir-heavy.ttf");
+  font-style: normal;
+  font-weight: 800;
+}
+
 * {
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: Avenir;
-  src: url(fonts/Avenir.ttc);
-  color: #3d4e61;
-  font-weight: 300;
-}
-@font-face {
-  font-family: "Avenir";
-  src: url("fonts/avenir-book.ttf");
-  font-weight: 300;
-}
-@font-face {
-  font-family: "Avenir";
-  src: url("fonts/avenir-heavy.ttf");
-  font-weight: 800;
+body {
+  font-family: Avenir, sans-serif;
 }
 
 .search-image-container {
@@ -26,12 +27,12 @@
 .search-image-container::before {
   content: "";
   position: absolute;
-  background: url(images/Search.svg) no-repeat;
   top: 25px;
   bottom: 0;
   left: 26px;
   margin: auto 0;
   width: 25px;
+  background: url(images/Search.svg) no-repeat;
 }
 
 .search-bar-big {
@@ -44,10 +45,11 @@
   border-radius: 4px;
   padding-left: 62px ;
   border: 1px solid #e1e7ed;
+  box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
   font-weight: 300;
   font-size: 16px;
   line-height: 22px;
-  box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
+  font-family: inherit;
 }
 
 .search-field-big:hover {
@@ -55,8 +57,9 @@
 }
 
 .search-field-big:focus {
-  background: linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
   border-radius: 3px;
+  font-weight: 800;
+  background: linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
 }
 
 .search-bar-small {
@@ -70,13 +73,13 @@
 .search-image-container-small::before {
   content: "";
   position: absolute;
-  background: url(images/Search.svg) no-repeat;
   left: 13px;
   top: 15px;
   bottom: 16px;
-  margin: auto 0;
   width: 11px;
   height: 11px;
+  margin: auto 0;
+  background: url(images/Search.svg) no-repeat;
   background-size: 11px;
 }
 
@@ -86,10 +89,11 @@
   border-radius: 4px;
   padding-left: 33px;
   border: 1px solid #e1e7ed;
+  box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
+  font-family: inherit;
   font-weight: 300;
   font-size: 14px;
   line-height: 22px;
-  box-shadow: 0 1px 8px rgba(61, 78, 97, 0.1);
 }
 
 .search-field-small:hover {
@@ -97,8 +101,9 @@
 }
 
 .search-field-small:focus {
-  background: linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
   border-radius: 3px;
+  font-weight: 800;
+  background: linear-gradient(180deg, #fff 0%, #f6f6f7 100%);
 }
 
 .search-field-big::placeholder {
